Sculpting base color is green #74613

Closed
opened 2020-03-10 11:55:15 +01:00 by Dalai Felinto · 6 comments

Blender Version
Broken: 18e3615a68
Worked: 18e3615a6819^

Short description of error
There is a general green tint when going to sculpt mode.

Exact steps for others to reproduce the error
Go to sculpt mode, things are green:

image.png

**Blender Version** Broken: 18e3615a6819 Worked: 18e3615a6819^ **Short description of error** There is a general green tint when going to sculpt mode. **Exact steps for others to reproduce the error** Go to sculpt mode, things are green: ![image.png](https://archive.blender.org/developer/F8398858/image.png)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pablo Dobarro was assigned by Dalai Felinto 2020-03-10 12:03:54 +01:00
Author
Owner

@PabloDobarro you cannot change existing versioning code like this.

You need to either bump subversion, run the code for all versions of Blender until we bump the version or to introduce a new variable AND THEN check if said variable exists in DNA.

@PabloDobarro you cannot change existing versioning code like this. You need to either bump subversion, run the code for all versions of Blender until we bump the version or to introduce a new variable AND THEN check if said variable exists in DNA.
Author
Owner

Added subscriber: @brecht
Removed subscriber: @dfelinto

Added subscriber: @brecht Removed subscriber: @dfelinto

This issue was referenced by b37482bc3d

This issue was referenced by b37482bc3d86e74f03568d62fa0184e1e78767e6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74613
No description provided.